# prizma-testsuite

./: Cargo.toml  README.md  build.rs
src/: cli.rs  config.rs  error.rs  filebuf.rs  lister.rs  main.rs  manual.rs  runner.rs
src/testcases/: alpha.rs  beta.rs  gamma.rs  mod.rs
